test/compile-fail/resolution/use/no-name-multi/expected.txt
error[E0425]: unresolved item `c`
  ┌─ ./test/compile-fail/resolution/use/no-name-multi/top.rhdl:7:8
  │
7 │ use a::c;
  │        ^ no `c` item in `a`

